--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-/Images/workout
+/Images/workout/Cardio fitness
+/Images/workout/Core
+/Images/workout/Loss wieght
+/Images/workout/Muscle tone
+/Images/workout/Posture correction
